Fix overflow-x and prepare to deploy

--- a/src/styles/partials/_base.css
+++ b/src/styles/partials/_base.css
@@ -4,14 +4,19 @@ body {
   font-family: var(--fontFamily);
   color: white;
   width: 100%;
-  overflow-x: hidden;
 
-  @media (--tablet) {
-    overflow-x: scroll;
-  }
 
   a {
     text-decoration: none;
     color: inherit;
+  }
+
+  #wrapper {
+    position: relative;
+    overflow-x: hidden;
+
+    @media (--desktop) {
+      overflow-x: scroll;
+    }
   }
 }
